fixed rounded borders

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Kado | Crea invitaciones para eventos en segundos</title>
 
     <meta name="description" content="Dualite Alpha Generated Project" />
     <meta name="author" content="Dualite Alpha" />
 
-    <meta property="og:title" content="Vite + React + TS" />
+    <meta property="og:title" content="Kado | Crea invitaciones para eventos en segundos" />
     <meta property="og:description" content="Dualite Alpha Generated Project" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://ibb.co/67X3xfSV" />
